# rust-jwt-crud

./: .env  Cargo.toml  README.md
migrations/: 20230317082154_init.up.sql
src/: config.rs  handler.rs  jwt_auth_middleware.rs  main.rs  model.rs  request.rs  response.rs  token.rs
